.metadata/.plugins/org.eclipse.cdt.ui/Demo.build.log
19:17:43 **** Incremental Build of configuration Debug for project Demo ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
..\main.cpp: In function 'int main()':
..\main.cpp:20:1: error: expected type-specifier before '}' token
 }
 ^

19:17:44 Build Finished (took 299ms)

